[gd_scene load_steps=2 format=2]

[ext_resource path="res://DisplaySettings.gd" type="Script" id=1]

[node name="DisplaySettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="Res" type="Label" parent="."]
margin_left = 320.0
margin_top = 199.0
margin_right = 448.0
margin_bottom = 213.0
text = "Resolution"

[node name="ResolutionOptions" type="OptionButton" parent="Res"]
margin_left = 192.0
margin_top = 1.0
margin_right = 321.0
margin_bottom = 21.0

[node name="HDR" type="Label" parent="."]
margin_left = 320.0
margin_top = 264.0
margin_right = 448.0
margin_bottom = 278.0
text = "HDR"

[node name="HDRBox" type="CheckBox" parent="HDR"]
margin_left = 240.0
margin_top = -6.0
margin_right = 264.0
margin_bottom = 18.0

[node name="MSAA" type="Label" parent="."]
margin_left = 320.0
margin_top = 168.0
margin_right = 448.0
margin_bottom = 182.0
text = "MSAA"

[node name="MSAAoptions" type="OptionButton" parent="MSAA"]
margin_left = 192.0
margin_right = 321.0
margin_bottom = 20.0

[node name="WindowMode" type="Label" parent="."]
margin_left = 320.0
margin_top = 232.0
margin_right = 451.0
margin_bottom = 246.0
text = "Window Mode"

[node name="WindowOptions" type="OptionButton" parent="WindowMode"]
margin_left = 192.0
margin_right = 321.0
margin_bottom = 20.0

[node name="FPS" type="Label" parent="."]
margin_left = 320.0
margin_top = 328.0
margin_right = 448.0
margin_bottom = 342.0
text = "FPS"

[node name="FPSoptions" type="OptionButton" parent="FPS"]
margin_left = 192.0
margin_right = 320.0
margin_bottom = 20.0

[node name="Vsync" type="Label" parent="."]
margin_left = 320.0
margin_top = 296.0
margin_right = 448.0
margin_bottom = 310.0
text = "Vsync"

[node name="VsyncBox" type="CheckBox" parent="Vsync"]
margin_left = 240.0
margin_top = -6.0
margin_right = 264.0
margin_bottom = 18.0

[connection signal="item_selected" from="Res/ResolutionOptions" to="." method="_on_ResolutionOptions_item_selected"]
[connection signal="pressed" from="HDR/HDRBox" to="." method="_on_HDRBox_pressed"]
[connection signal="item_selected" from="MSAA/MSAAoptions" to="." method="_on_MSAAoptions_item_selected"]
[connection signal="item_selected" from="WindowMode/WindowOptions" to="." method="_on_WindowOptions_item_selected"]
[connection signal="item_selected" from="FPS/FPSoptions" to="." method="_on_FPSoptions_item_selected"]
[connection signal="pressed" from="Vsync/VsyncBox" to="." method="_on_VsyncBox_pressed"]
